--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
 .App {
   text-align: center;
+  /* background-color: green; */
+  /* border-bottom: 1px solid black; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App > * {
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Header {
+  background-color: green;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Content {
+  background-color: rgb(191, 191, 199);
+}
+
+.Header > h1 {
+  color: rgb(59, 44, 44);
+  /* margin-top: 0px; */
+}
+
+.flex {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+.Content > div > * {
+  margin: 10px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Chart {
+  padding: 100px;
+  background-color: coral;
+}
+
+.inputs {
+  flex-direction: row;
+}
+
+.inputs > * {
+  margin: 0 10px;
 }
